syntax = "proto3";
option java_package = "info.xiaomo.server.shared.protocol.gm";
option java_multiple_files = true;


message CloseServerRequest {
  string resMsg = 1;
}

message CloseServerResponse {
  string resMsg = 1;
}